option(BUILD_QT     "Build qt sublibrary (requires Qt)" OFF)
option(BUILD_GL     "Build gl sublibrary (requires qt sublibrary and glbinding)" OFF)
option(BUILD_WINDOW "Build window sublibrary (requires GLFW)" OFF)
option(BUILD_CL     "Build cl sublibrary (requires OpenCL)" OFF)
option(BUILD_ALL    "Build all sublibraries" OFF)

if (BUILD_GL AND NOT (BUILD_QT OR BUILD_ALL))
    message(FATAL_ERROR "The gl sublibrary requires the qt sublibrary")
endif()

if (BUILD_WINDOW AND NOT (BUILD_GL OR BUILD_ALL))
    message(FATAL_ERROR "The window sublibrary requires the gl sublibrary")
endif()

add_subdirectory(cpp)
add_subdirectory(cmake)
if(BUILD_QT OR BUILD_ALL)
    add_subdirectory(qt)
endif()
if(BUILD_GL OR BUILD_ALL)
    add_subdirectory(gl)
endif()
if(BUILD_WINDOW OR BUILD_ALL)
    add_subdirectory(window)
endif()
if(BUILD_CL OR BUILD_ALL)
    add_subdirectory(cl)
endif()
